# gpu-neural-net-accelerator

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark.cu
notebook/: gpu_accelerator.ipynb
plots/: benchmark_results.txt
python/: benchmark_viz.py  gpu_ops.py  test_backward.py  test_gpu_ops.py
src/: cpu_ops.cpp  matmul.cu  matmul_backward.cu  ops.h  relu.cu  relu_backward.cu  softmax.cu  softmax_backward.cu
